--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -4,9 +4,10 @@ services:
     rootDir: backend
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port 10000
     envVars:
       - key: PYTHON_VERSION
         value: "3.12.10"
       - key: SECRET_KEY
         generateValue: true
+
